# Expo

./: .env.example  .gitignore  Expo-Product-Concept-V1.docx
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  scheduler.py
backend/app/dependencies/: auth.py
backend/app/models/: alert.py  bank.py  beta_application.py  integration.py  invoice.py  message.py  restaurant.py  settings_change.py  square_data.py  support_ticket.py  user.py
backend/app/routers/: admin.py  auth.py  beta.py  billing.py  integrations.py  plaid_link.py  restaurants.py  sms.py  square_oauth.py  sync.py
backend/app/services/: alert_engine.py  claude_service.py  context_builder.py  conversation.py  deposit_matching.py  first_sync.py  invoice_parser.py  invoice_processor.py  morning_send.py  nightly_pipeline.py  ocr_service.py  plaid_sync.py  recap_generator.py  s3_storage.py  settings_handler.py  square_realtime.py  square_sync.py  twilio_sms.py
docs/: GET_STARTED_COPY.md  GET_STARTED_PAGE_PLAN.md  INTEGRATIONS.md  INTEGRATION_SETUP_GUIDE.md
web/: package-lock.json  package.json
web/src/: proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/beta/: page.tsx
web/src/components/: AccordionFAQ.tsx  AdminNav.tsx  DashboardChecklist.tsx  DashboardNav.tsx  ExpoLogo.tsx  FadeIn.tsx  Footer.tsx  HeroVideo.tsx  IntegrationCard.tsx  Logo.tsx  PartnerLogos.tsx  PhoneMockup.tsx  StickyNav.tsx  TypingHero.tsx
web/src/contexts/: AuthContext.tsx
(+30 files in other folders)
